# gripper_rviz

./: CMakeLists.txt  README.md  package.xml  test_gripper.py
config/: gripper_config.yaml
gripper_rviz_sync/: __init__.py  gripper_controller.py  gripper_state_publisher.py  joint_state_merger.py
launch/: gripper_sync.launch.py
urdf/: onrobot_rg2_movable.urdf.xacro
